--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.1.0
+  google_fonts: ^6.1.0
   latlong2: ^0.9.0
   transparent_image: ^2.0.1
   flutter_rating_bar: ^4.0.1
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   firebase_storage: ^11.2.8
+  cloud_firestore: ^4.9.3
 
 
 dev_dependencies:
